# Lashon

./: LICENSE  README.md  lashon.cabal
src/Lashon/: Text.hs
