name:                lashon
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/levinotik/lashon#readme
license:             BSD3
license-file:        LICENSE
author:              Levi Notik
maintainer:          levinotik@gmail.com
copyright:           BSD3
category:            web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lashon.Text
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010
  build-depends:       text
                     , QuickCheck
                     , quickcheck-instances

source-repository head
  type:     git
  location: https://github.com/levinotik/lashon
